Closed Bug 1699930 Opened 3 years ago Closed 3 years ago

text-scaling-factor incorrectly affects size of UI elements such as scrollbars

Categories

(Core :: Widget: Gtk, defect, P3)

Firefox 88
x86_64
Linux
defect

Tracking

()

RESOLVED FIXED
89 Branch
Tracking Status
firefox-esr78 --- disabled
firefox86 --- disabled
firefox87 --- disabled
firefox88 --- disabled
firefox89 --- fixed

People

(Reporter: nagisa, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files, 1 obsolete file)

I have set the following system-wide property:

gsettings set org.gnome.desktop.interface text-scaling-factor 1.5

Firefox picks it up and derives its own devPixelPerCss from this. Afterwards the UI elements and scrollbars will be scaled accordingly, which is not what native GTK applications do. The newly implemented scrollbars look pretty jarring, for instance (see the attached screenshot).

This is not an issue that affects scrollbars in current stable firefox.

Attachment #9210537 - Attachment is obsolete: true

Thanks for filing, will take a look. As a workaround you can customize the scrollbar size changing widget.non-native-theme.scrollbar.size.

Flags: needinfo?(emilio)

Setting widget.non-native-theme.scrollbar.size to 12 / text-scaling-factor = 8 does produce very native-looking results.

This matches the native theme. We plumb it via LookAndFeel to avoid
having to load GTK settings in child processes.

Assignee: nobody → emilio
Status: NEW → ASSIGNED
Flags: needinfo?(emilio)
Regressed by: remove-native-theming
Regressed by: linux-nnt
No longer regressed by: remove-native-theming
Has Regression Range: --- → yes
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/71f00533fc8e
Don't let GTK text scale affect non-native scrollbar sizes. r=mstange
Severity: -- → S3
Priority: -- → P3
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 89 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: