Bug 1699930 - Don't let GTK text scale affect non-native scrollbar sizes. r=mstange

This matches the native theme. We plumb it via LookAndFeel to avoid
having to load GTK settings in child processes.

Differential Revision: https://phabricator.services.mozilla.com/D109275